examples/test/testpolicy10578.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10578
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key25: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value23
          key11: value4
          key40: value28
      podSelector:
        matchLabels:
          key18: value32
          key8: value30
          key6: value6
